added date entry

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
             <h1>MOOD & GRATITUDE JOURNAL</h1>
             <p class="sub-line">Track your emotions | Embrace gratitude | Stay mindful</p>
         </header>
+
+        <section class="form-ection">
+            <form id="entry-form">
+                <label for="date">Date:</label>
+                <input type="date" id="date" required/>
+            </form> 
+        </section>
+        
         <section class="form-section">
             <form id="entry-form">
                 <label for="mood">How are you feeling today?</label>
